@@ -5,23 +5,22 @@
 package com.mytutor.services.impl;
 
 import com.mytutor.constants.RoleName;
-import com.mytutor.dto.AccountDetailsDto;
+import com.mytutor.dto.ResponseAccountDetailsDto;
 import com.mytutor.dto.tutor.CertificateDto;
 import com.mytutor.dto.tutor.EducationDto;
-import com.mytutor.entities.Account;
-import com.mytutor.entities.Certificate;
-import com.mytutor.entities.Education;
-import com.mytutor.entities.Role;
+import com.mytutor.dto.tutor.TutorDescriptionDto;
+import com.mytutor.entities.*;
 import com.mytutor.exceptions.AccountNotFoundException;
 import com.mytutor.exceptions.CertificateNotFoundException;
 import com.mytutor.exceptions.EducationNotFoundException;
-import com.mytutor.repositories.AccountRepository;
-import com.mytutor.repositories.CertificateRepository;
-import com.mytutor.repositories.EducationRepository;
-import com.mytutor.repositories.RoleRepository;
+import com.mytutor.repositories.*;
 import com.mytutor.services.TutorService;
+
+import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
+
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -48,75 +47,75 @@ public class TutorServiceImpl implements TutorService {
     CertificateRepository certificateRepository;
 
     @Autowired
+    SubjectRepository subjectRepository;
+
+    @Autowired
     private ModelMapper modelMapper;
+    @Autowired
+    private TutorDetailRepository tutorDetailRepository;
 
     @Override
-    public ResponseEntity<List<AccountDetailsDto>> getAllTutors() {
-        Role role = roleRepository.findByRoleName(RoleName.TUTOR.name()).get();
-        
-        Set<Account> accounts = role.getAccounts();
-        
-        List<AccountDetailsDto> tutors = role.getAccounts().stream().map(a -> modelMapper.map(a, AccountDetailsDto.class)).toList();
-        
-        return ResponseEntity.status(HttpStatus.OK).body(tutors);
+    public ResponseEntity<List<ResponseAccountDetailsDto>> getAllTutors() {
+        List<Account> tutors = accountRepository.findAllAccountsByRole(RoleName.TUTOR.name());  // Assuming RoleName enum exists
+        List<ResponseAccountDetailsDto> tutorDtos = tutors.stream()
+                .map(account -> modelMapper.map(account, ResponseAccountDetailsDto.class))
+                .collect(Collectors.toList());
+        return ResponseEntity.status(HttpStatus.OK).body(tutorDtos);
+
     }
-    
+
     @Override
     public ResponseEntity<List<EducationDto>> getListOfEducationsByTutorId(Integer tutorId) {
 
-//        List<Education> educations = educationRepository.findByTutorId(tutorId);
-//        List<EducationDto> educationDtos = educations.stream().map(e -> modelMapper.map(e, EducationDto.class)).toList();
-//        return ResponseEntity.status(HttpStatus.OK).body(educationDtos);
-        throw new UnsupportedOperationException("Not supported yet."); // Generated from nbfs://nbhost/SystemFileSystem/Templates/Classes/Code/GeneratedMethodBody
+        List<Education> educations = educationRepository.findByAccountId(tutorId);
+        List<EducationDto> educationDtos = educations.stream().map(e -> modelMapper.map(e, EducationDto.class)).toList();
+        return ResponseEntity.status(HttpStatus.OK).body(educationDtos);
     }
 
     @Override
     public ResponseEntity<List<CertificateDto>> getListOfCertificatesByTutorId(Integer tutorId) {
 
-//        List<Certificate> certificates = certificateRepository.findByTutorId(tutorId);
-//        List<CertificateDto> certificateDtos = certificates.stream().map(c -> modelMapper.map(c, CertificateDto.class)).toList();
-//        return ResponseEntity.status(HttpStatus.OK).body(certificateDtos);
-        throw new UnsupportedOperationException("Not supported yet."); // Generated from nbfs://nbhost/SystemFileSystem/Templates/Classes/Code/GeneratedMethodBody
+        List<Certificate> certificates = certificateRepository.findByAccountId(tutorId);
+        List<CertificateDto> certificateDtos = certificates.stream().map(c -> modelMapper.map(c, CertificateDto.class)).toList();
+        return ResponseEntity.status(HttpStatus.OK).body(certificateDtos);
     }
 
     @Override
     public ResponseEntity<?> addAllEducations(Integer tutorId, List<EducationDto> educationDtos) {
 
-//        Account tutor = accountRepository.findById(tutorId).orElseThrow(() -> new AccountNotFoundException("Account not found"));
-//
-//        for (EducationDto educationDto : educationDtos) {
-//
-//            Education education = modelMapper.map(educationDto, Education.class);
-//            education.setAccount(tutor);
-//            education.setVerified(false);
-//
-//            educationRepository.save(education);
-//        }
-//
+        Account tutor = accountRepository.findById(tutorId).orElseThrow(() -> new AccountNotFoundException("Account not found"));
+
+        for (EducationDto educationDto : educationDtos) {
+
+            Education education = modelMapper.map(educationDto, Education.class);
+            education.setAccount(tutor);
+            education.setVerified(false);
+
+            educationRepository.save(education);
+        }
+
 //        List<Education> educations = educationRepository.findByTutorId(tutorId);
 //        List<EducationDto> educationResponse = educations.stream().map(e -> modelMapper.map(e, EducationDto.class)).toList();
-//
-//        return ResponseEntity.status(HttpStatus.OK).body(educationResponse);
-        throw new UnsupportedOperationException("Not supported yet."); // Generated from nbfs://nbhost/SystemFileSystem/Templates/Classes/Code/GeneratedMethodBody
+
+        return ResponseEntity.status(HttpStatus.OK).body("Added successfully");
     }
 
     @Override
     public ResponseEntity<?> addAllCertificates(Integer tutorId, List<CertificateDto> certificateDtos) {
-//        Account tutor = accountRepository.findById(tutorId).orElseThrow(() -> new AccountNotFoundException("Account not found"));
-//
-//        for (CertificateDto certificateDto : certificateDtos) {
-//            Certificate certificate = modelMapper.map(certificateDto, Certificate.class);
-//            certificate.setAccount(tutor);
-//            certificate.setVerified(false);
-//
-//            certificateRepository.save(certificate);
-//        }
-//
+        Account tutor = accountRepository.findById(tutorId).orElseThrow(() -> new AccountNotFoundException("Account not found"));
+
+        for (CertificateDto certificateDto : certificateDtos) {
+            Certificate certificate = modelMapper.map(certificateDto, Certificate.class);
+            certificate.setAccount(tutor);
+            certificate.setVerified(false);
+
+            certificateRepository.save(certificate);
+        }
+
 //        List<Certificate> certificates = certificateRepository.findByTutorId(tutorId);
 //        List<CertificateDto> certificateResponse = certificates.stream().map(c -> modelMapper.map(c, CertificateDto.class)).toList();
-//
-//        return ResponseEntity.status(HttpStatus.OK).body(certificateResponse);
-        throw new UnsupportedOperationException("Not supported yet."); // Generated from nbfs://nbhost/SystemFileSystem/Templates/Classes/Code/GeneratedMethodBody
+
+        return ResponseEntity.status(HttpStatus.OK).body("Added successfully!");
 
     }
 
@@ -124,15 +123,12 @@ public class TutorServiceImpl implements TutorService {
     public ResponseEntity<?> updateEducation(Integer tutorId, Integer educationId, EducationDto educationDto) {
         Account tutor = accountRepository.findById(tutorId).orElseThrow(() -> new AccountNotFoundException("Account not found"));
 
-        Education education = educationRepository.findById(educationId).orElseThrow(() -> new EducationNotFoundException("Education not found"));
+        Education education = educationRepository.findById(Long.valueOf(educationId)).orElseThrow(() -> new EducationNotFoundException("Education not found"));
 
         if (education.getAccount().getId() != tutor.getId()) {
             throw new EducationNotFoundException("This education does not belong to this tutor");
         }
 
-//        if (!checkRole(account)) {
-//            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Account is not a tutor");
-//        }
         education = modelMapper.map(educationDto, Education.class);
         education.setAccount(tutor);
         education.setVerified(false);
@@ -154,9 +150,6 @@ public class TutorServiceImpl implements TutorService {
             throw new CertificateNotFoundException("This certificate does not belong to this tutor");
         }
 
-//        if (!checkRole(account)) {
-//            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Account is not a tutor");
-//        }
         certificate = modelMapper.map(certificateDto, Certificate.class);
         certificate.setAccount(tutor);
         certificate.setVerified(false);
@@ -172,7 +165,7 @@ public class TutorServiceImpl implements TutorService {
     public ResponseEntity<?> deleteEducation(Integer tutorId, Integer educationId) {
         Account tutor = accountRepository.findById(tutorId).orElseThrow(() -> new AccountNotFoundException("Account not found"));
 
-        Education education = educationRepository.findById(educationId).orElseThrow(() -> new EducationNotFoundException("Education not found"));
+        Education education = educationRepository.findById(Long.valueOf(educationId)).orElseThrow(() -> new EducationNotFoundException("Education not found"));
 
         if (education.getAccount().getId() != tutor.getId()) {
             throw new EducationNotFoundException("This education does not belong to this tutor");
@@ -197,5 +190,33 @@ public class TutorServiceImpl implements TutorService {
 
         return ResponseEntity.status(HttpStatus.OK).body("deleted successfully");
     }
+
+    @Override
+    public ResponseEntity<?> addTutorDescription(Integer accountId, TutorDescriptionDto tutorDescriptionDto) {
+        Account account = accountRepository.findById(accountId)
+                .orElseThrow(() -> new RuntimeException("Account not found"));
+
+        // neu accountid da nam trong danh sach thi return luon
+        if (tutorDetailRepository.findByAccountId(accountId) != null) {
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Tutor description exists already!");
+        }
+        TutorDetail tutorDetail = modelMapper.map(tutorDescriptionDto, TutorDetail.class);
+
+        tutorDetail.setAccount(account);
+        tutorDetailRepository.save(tutorDetail);
+
+        Set<Subject> subjects = new HashSet<>();
+        for (Subject subject : tutorDescriptionDto.getSubjects()) {
+            Subject existingSubject = subjectRepository.findBySubjectName(subject.getSubjectName())
+                    .orElseGet(() -> subjectRepository.save(subject));
+            subjects.add(existingSubject);
+        }
+        account.setSubjects(subjects);
+
+        accountRepository.save(account);
+
+        return ResponseEntity.status(HttpStatus.OK).body("Tutor description updated successfully!");
+    }
+
 
 }
